# RVC-Realtime

./: .gitignore  .gitmodules  infer-web.py  pyproject.toml
infer/modules/vc/: modules.py  utils.py
realtime_v2/: .gitignore  __init__.py  cli_rvc.py  engine.py  model_adapter.py  requirements.txt  requirements_cli_windows.txt  server.py  sola.py
realtime_v2/runtime/: __init__.py  base.py  builder.py  dfn.py  executor.py  policies.py  vad.py
